[gd_scene load_steps=6 format=3 uid="uid://cvv28kof31c8"]

[ext_resource type="Script" uid="uid://ckoprcgbgx78h" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="Script" uid="uid://bwnixbfh182w7" path="res://scripts/networks/network_manager.gd" id="2_0wfyh"]

[sub_resource type="Gradient" id="Gradient_0wfyh"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.696913, 0.501511, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sugp2"]
gradient = SubResource("Gradient_0wfyh")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wfyh"]
size = Vector2(64, 64)

[node name="Main" type="Node2D"]
script = ExtResource("1_o5qli")

[node name="NetworkManager" type="Node" parent="." node_paths=PackedStringArray("_players_spawn_node")]
unique_name_in_owner = true
script = ExtResource("2_0wfyh")
_players_spawn_node = NodePath("../Players")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://dsuraimo3bxfq")
spawn_path = NodePath("../Players")

[node name="Players" type="Node" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="UI"]
offset_right = 8.0
offset_bottom = 8.0
text = "Host"

[node name="Join" type="Button" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -38.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Join"

[node name="Ground" type="Sprite2D" parent="."]
position = Vector2(192, 216)
scale = Vector2(6, 1)
texture = SubResource("GradientTexture2D_sugp2")

[node name="StaticBody2D" type="StaticBody2D" parent="Ground"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D"]
shape = SubResource("RectangleShape2D_0wfyh")

[connection signal="button_down" from="UI/Button" to="." method="_on_host_button_down"]
[connection signal="button_down" from="UI/Join" to="." method="_on_join_button_down"]
